--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,10 +1,10 @@
-$body-bg: #f2f2f2;
+$body-bg: rgb(218 60 40);
 
-$primary: #3BA5DC;
+$primary: #375faa;
 $secondary: #FF3697;
 $danger: #EB5757;
 $success: #27AE60;
-$warning: #FF7F50;
+$warning: #ffcb05;
 $info: #00C9BD;
 $dark: #272727;
 
